--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "ts-node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsdom": "^20.0.0",
+    "@types/node": "^18.7.11",
+    "@types/request-promise-native": "^1.0.18",
     "nodemon": "^2.0.19",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
